# pirs

./: .gitignore  Cargo.toml  PIRS-BENCH-PLAN.md  PROJECT-STATE.md  README.md  action.yml
.github/workflows/: ci.yml  release.yml
.pirs/: handoff.md
.pirs/profiles/: security-reviewer.rhai  weak.rhai
.pirs/strategies/: general-plan-exec.rhai  general-wide-plan-exec.rhai  plan-critic-exec-pro-flash.rhai  plan-pro-exec-flash.rhai  wide-plan-exec-pro-flash.rhai
crates/pirs/: Cargo.toml
crates/pirs-agent/: Cargo.toml
crates/pirs-agent/src/: agent.rs  agent_loop.rs  audit.rs  compaction.rs  control_pins.rs  delegate.rs  events.rs  gate.rs  jobs.rs  lib.rs  memory.rs  phase_agent.rs  profile.rs  steering.rs  strategy.rs  thrash.rs  tool.rs  usage.rs  use_tool.rs  validate.rs
crates/pirs-agent/tests/: cancel_test.rs  event_serde_test.rs  loop_test.rs  phase_agent_test.rs
crates/pirs-ai/: Cargo.toml
crates/pirs-ai/src/: anthropic.rs  backends_builtin.rs  catalog.rs  embed.rs  env_auth.rs  lib.rs  model_ref.rs  openai.rs  pricing.rs  registry_file.rs  routing.rs  speech.rs  sse.rs
crates/pirs-ai/tests/: embed_client_test.rs  retry_test.rs  routing_live_smoke.rs  sse_utf8_test.rs
crates/pirs-audio/: Cargo.toml
crates/pirs-audio/src/: engines.rs  ffmpeg.rs  main.rs  server.rs
crates/pirs-bench/: Cargo.toml  README.md
crates/pirs-bench-runner/: Cargo.toml
crates/pirs-bench-runner/profiles/: security-reviewer.rhai
crates/pirs-bench-runner/src/: agent_runner.rs  lib.rs  main.rs  metrics.rs  selftest.rs
crates/pirs-bench-runner/strategies/: plan-oracle-exec.rhai
crates/pirs-bench-runner/tests/: profiles_load.rs
crates/pirs-bench/detectors/: ci.rhai  go.rhai  pytest.rhai  sympy.rhai
crates/pirs-bench/docs/: SWE-BENCH-LITE.md
crates/pirs-bench/src/: baseline.rs  bootstrap.rs  cache.rs  command.rs  detect.rs  driver.rs  gate.rs  git.rs  harness.rs  junit.rs  lib.rs  localize.rs  orchestrate.rs  probe.rs  report.rs  run.rs  timing.rs  types.rs
crates/pirs-bench/tests/: e2e_pytest.rs
crates/pirs-claw/: Cargo.toml
crates/pirs-claw/src/: attach.rs  cron_blueprints.rs  cron_util.rs  gateway.rs  instance_lock.rs  learn.rs  lib.rs  life_tools.rs  main.rs  presets.rs  registry.rs  secrets.rs  session_search.rs  skill_tools.rs  skills.rs  speech_setup.rs  voice.rs
crates/pirs-graph/: Cargo.toml
crates/pirs-graph/examples/: bench.rs
crates/pirs-graph/src/: ast_edit.rs  bg_index.rs  code_map.rs  code_search.rs  embed_util.rs  graph.rs  lib.rs  repo_map.rs  semantic_search.rs  store.rs
crates/pirs-graph/tests/: bg_index_test.rs  graph_test.rs  store_test.rs
crates/pirs-lsp/: Cargo.toml
crates/pirs-lsp/src/: client.rs  lib.rs  tool.rs
crates/pirs-lsp/tests/: lsp_test.rs
crates/pirs-mcp/: Cargo.toml
crates/pirs-mcp/src/: client.rs  config.rs  http.rs  lib.rs  tool.rs
crates/pirs-mcp/tests/: client_test.rs  http_test.rs  mcp_echo.py  mock_mcp_http.py
crates/pirs-orchestrator/: Cargo.toml
crates/pirs-orchestrator/src/: client.rs  lib.rs  main.rs  rpc_process.rs  server.rs  storage.rs  supervisor.rs  types.rs
crates/pirs-orchestrator/tests/: e2e_test.rs  mock_rpc_child.sh
crates/pirs-rhai/: Cargo.toml
crates/pirs-rhai/builtins/: default.profile.rhai  monolithic.rhai  plan-critic-exec.rhai  plan-exec-weak.rhai  plan-exec.rhai  weak.profile.rhai  wide-plan-exec.rhai
crates/pirs-rhai/src/: builtins.rs  caps.rs  discover.rs  lib.rs  profile_script.rs  strategy_script.rs  weak_packs.rs
crates/pirs-rhai/tests/: blame_pack_test.rs  example_test.rs  goal_test.rs  host_test.rs  interp_test.rs  loop_hooks_test.rs  mutation_guard_test.rs  pack_test.rs  packs2_test.rs  packs3_test.rs  packs4_test.rs  packs5_test.rs  packs6_test.rs  packs7_test.rs  reentrancy_test.rs  subagent_test.rs  trust_test.rs  verify_impact_test.rs  workflow_pack_test.rs  workflow_test.rs
crates/pirs-skills/: Cargo.toml
crates/pirs-skills/src/: heartbeat.rs  learn.rs  lib.rs  skill.rs  soul.rs  tools.rs
crates/pirs-tools/: Cargo.toml
crates/pirs-tools/src/: ask_user.rs  audit_tool.rs  bash.rs  browser.rs  browser_cdp.rs  checkpoint.rs  computer.rs  doctor.rs  edit.rs  edit_block.rs  find.rs  fleet.rs  git_tools.rs  grep.rs  job_tools.rs  lib.rs  ls.rs  paths.rs  permission_mode.rs  pr_tools.rs  project.rs  read.rs  recall.rs  research.rs  safety_profile.rs  sandbox.rs  session_rewind.rs  todo_tool.rs  truncate.rs  vision.rs  web.rs  work_context.rs  worktree.rs  write.rs
crates/pirs/assets/: serve.html
crates/pirs/src/: acp_mode.rs  approval.rs  auth.rs  blame.rs  config_file.rs  discovery.rs  main.rs  models_cmd.rs  pack.rs  registry.rs  replay.rs  rpc_mode.rs  runtime_safety.rs  secrets_edit.rs  serve.rs  session.rs  session_stats.rs  subagent.rs  system_prompt.rs  tui.rs  weak_compose.rs
crates/pirs/src/tui/: journey.rs  mod.rs  model_picker.rs  slash.rs  theme.rs  tools.rs
crates/pirs/tests/: profiles_load.rs  strategies_load.rs
docs/: HERMES-GAPS.md  MODELS.md  PRODUCTS.md  ROADMAP.md  TUI-JOURNEY.md  WORK-CONTEXT.md  hybrid-model-economics.md  pirs-claw.md  speech.md
examples/extensions/: approval.rhai  approval2.rhai  audit-log.rhai  blame.rhai  btw.rhai  chapter-spine.rhai  checkpoint.rhai  checkpoints.rhai  conductor.rhai  context-janitor.rhai  cost-sentinel.rhai  critic-arena.rhai  critic.rhai  diff-shield.rhai  dirty-guard.rhai  dmail.rhai  env-doctor.rhai  failure-diary.rhai  fork.rhai  goal.rhai  guardrails.rhai  hive-note.rhai  instincts.rhai  red-team.rhai  relay-race.rhai  repo-pulse.rhai  review-gate.rhai  reviewer.rhai  rollback.rhai  runs.rhai  safe_edit.rhai  semantic-bookmarks.rhai  session-handoff.rhai  shadow-verify.rhai  skill-crystallizer.rhai  spec-check.rhai  (+8 more)
extensions/: README.md  blast-radius-judge.rhai  dirty-guard.rhai  file-checkpoints.rhai  path-guard.rhai  review-gate.rhai  safe-edit.rhai  sandbox.rhai  stash-checkpoint.rhai  weak-model.rhai  web-tools.rhai  word-count.rhai
qa/: README.md  bench-swebench-5x5.md  cli-help.txt  clippy.txt  fmt.txt  strategy-discovery.txt  test-suite.txt
scripts/: install_local_speech.sh
(+104 files in other folders)
