[workspace]
resolver = "2"
members = [
    "crates/pirs-ai",
    "crates/pirs-agent",
    "crates/pirs-tools",
    "crates/pirs-rhai",
    "crates/pirs",
    "crates/pirs-orchestrator",
    "crates/pirs-mcp",
    "crates/pirs-graph",
    "crates/pirs-lsp",
    "crates/pirs-bench",
    "crates/pirs-bench-runner",
    "crates/pirs-claw",
    "crates/pirs-skills",
    "crates/pirs-audio",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
jsonschema = "0.28"
async-trait = "0.1"
thiserror = "2"
anyhow = "1"
futures = "0.3"
futures-util = "0.3"
rhai = { version = "1", features = ["sync", "serde", "metadata"] }
clap = { version = "4", features = ["derive", "env"] }
rustyline = "15"
regex = "1"
ignore = "0.4"
toml = "0.8"
unicode-normalization = "0.1"
directories = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["trace"] }
cron = "0.15"
pirs-ai = { path = "crates/pirs-ai" }
pirs-agent = { path = "crates/pirs-agent" }
pirs-tools = { path = "crates/pirs-tools" }
pirs-skills = { path = "crates/pirs-skills" }
pirs-rhai = { path = "crates/pirs-rhai" }
pirs-mcp = { path = "crates/pirs-mcp" }
pirs-graph = { path = "crates/pirs-graph" }
pirs-lsp = { path = "crates/pirs-lsp" }
