[package]
name = "pirs-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pirs-ai = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonschema = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
pirs-tools = { workspace = true }
tempfile = "3"
tracing = { workspace = true }
