[package]
name = "pirs-ai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
