[package]
name = "pirs-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lightweight OpenAI-compatible STT/TTS daemon (subprocess engines, no ONNX)"

[[bin]]
name = "pirs-audio"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = "3"

[dev-dependencies]
tempfile = "3"
