[package]
name = "pirs-bench"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
quick-xml = "0.36"
tempfile = "3"
wait-timeout = "0.2"
libc = { workspace = true }
rhai = { workspace = true }
pirs-graph = { path = "../pirs-graph" }

[dev-dependencies]
tempfile = "3"
