[package]
name = "pirs-claw"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal + gateway agent (Hermes-class gaps; no Modal/Daytona/Singularity)"

[[bin]]
name = "pirs-claw"
path = "src/main.rs"

[dependencies]
pirs-ai = { workspace = true }
pirs-agent = { workspace = true }
pirs-tools = { workspace = true }
pirs-skills = { workspace = true }
pirs-rhai = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json", "rustls-tls"] }
toml = { workspace = true }
libc = "0.2"
directories = "6"

[dev-dependencies]
tempfile = "3"
async-trait = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }

[[test]]
name = "cli_delivery"
path = "tests/cli_delivery.rs"
