[package]
name = "pirs-graph"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pirs-ai = { workspace = true }
pirs-agent = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
ignore = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }
tantivy = "0.26"
tokio = { workspace = true }
tracing = { workspace = true }
schemars = { workspace = true }
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
tokio-util = { workspace = true }
