[package]
name = "pirs-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pirs-ai = { workspace = true }
pirs-agent = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio-util = { workspace = true }
