[package]
name = "pirs-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pirs-agent = { workspace = true }
pirs-ai = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
tokio-util = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
