[package]
name = "pirs-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pirs-orchestrator"
path = "src/main.rs"

[dependencies]
pirs-agent = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
libc = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
