[package]
name = "pirs-rhai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pirs-ai = { workspace = true }
pirs-agent = { workspace = true }
rhai = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
atty = "0.2"
sha2 = "0.10"
libc = { workspace = true }

[dev-dependencies]
tempfile = "3"
futures = "0.3"
async-trait = "0.1"
