[package]
name = "pirs-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "agentskills.io skill discovery, tools, and learning loop (shared by pirs + pirs-claw)"

[dependencies]
pirs-ai = { workspace = true }
pirs-agent = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json", "rustls-tls"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
