[package]
name = "pirs-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pirs-ai = { workspace = true }
pirs-agent = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
ignore = { workspace = true }
unicode-normalization = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }
base64 = "0.22"
similar = "2"
globset = "0.4"
tempfile = "3"
toml = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
futures = { workspace = true }
# Pure-Rust Chrome DevTools Protocol client (no Node/Playwright runtime).
chromiumoxide = { version = "0.9", optional = true }

[features]
default = ["cdp"]
cdp = ["dep:chromiumoxide"]

[dev-dependencies]
tempfile = "3"
