[package]
name = "pirs"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pirs"
path = "src/main.rs"

[dependencies]
pirs-ai = { workspace = true }
pirs-agent = { workspace = true }
pirs-tools = { workspace = true }
pirs-rhai = { workspace = true }
pirs-mcp = { workspace = true }
pirs-graph = { workspace = true }
pirs-lsp = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
rustyline = { workspace = true }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
unicode-width = "0.2"
futures = "0.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3"
