[package]
name = "pirs"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pirs"
path = "src/main.rs"

[dependencies]
tempfile = "3"
pirs-ai = { workspace = true }
pirs-agent = { workspace = true }
pirs-tools = { workspace = true }
pirs-skills = { workspace = true }
pirs-rhai = { workspace = true }
pirs-mcp = { workspace = true }
pirs-graph = { workspace = true }
pirs-lsp = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
rustyline = { workspace = true }
ratatui = { version = "0.29", features = ["unstable-backend-writer"] }
crossterm = { version = "0.28", features = ["event-stream"] }
unicode-width = "0.2"
futures = "0.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
getrandom = "0.2"
base64 = "0.22"

[dev-dependencies]

